--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
     "react-image-gallery": "^1.2.12",
     "react-router-dom": "^6.14.2",
